# Mp4Parser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3rdlibrary/lz4/include/: lz4frame.h
3rdlibrary/lz4/lib/: liblz4_static.lib
resources/: App.rc.in  resource.h
src/: AppConfigure.h  Mp4ParseData.cpp  Mp4ParseData.h  Mp4Parser.cpp  Mp4Parser.h  Myffmpeg.h  VideoStreamInfo.cpp  VideoStreamInfo.h
